test/files/neg/t10066.check
t10066.scala:33: error: implicit error;
!I extractor: Extractor[String]
  println(storage.foo[String])
          ^
t10066.scala:37: error: implicit error;
!I extractor: Extractor[A]
  println(storage.foo)
          ^
2 errors
